syntax = "proto3";
package ffi.messaging;
// Sample messages.

message void {}

message VectorEntry {
    uint64 id = 1;
    repeated float vector = 2;
    string payload = 3;
}


message ToRust {
    void say_hello = 1;
    add request_add = 2;
}

message add {
    int32 v1 = 1;
    int32 v2 = 2;
}

message FromRust {
    string saying_hello = 1;
    int32 add_result = 2;
}
